代码优化 (#16)